fixed standings spacing from banner

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,7 +15,7 @@
 .container__standings {
     width: 180px;
     left: 100px;
-    top: 90px;
+    top: 100px;
     position: absolute;
 
     .entry {
